Add Netlify redirects for SPA routing

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "cross-env BROWSER=chrome vite",
     "dev": "cross-env BROWSER=chrome vite",
     "lint": "eslint .",
-    "preview": "cross-env BROWSER=chrome vite preview"
+    "preview": "cross-env BROWSER=chrome vite preview",
+    "build": "vite build"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
